add reference to yapc surveys copyright notice on questions/results

--- a/views/surveys/questions.html
+++ b/views/surveys/questions.html
@@ -27,6 +27,9 @@
 </div>
 
 <button type="submit" class="btn btn-primary">Submit</button>
+
+<div><small>Many survey questions were taken from <a href="http://yapc-surveys.org/">YAPC Surveys</a> which is copyright The Perl Foundation and may be used under a <a href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution Share Alike</a> license. All changes and additions are copyright the Interchange Development Group.</small></div>
+
 </form>
 
 <div id="templates" class="hidden">
