--- a/views/surveys/result.html
+++ b/views/surveys/result.html
@@ -1,6 +1,6 @@
-<form class="form survey" action="/surveys" method="post">
-<input type="hidden" class="survey_id" name="survey_id">
-
+<div class="no_responses">
+  <p class="lead">Sorry - no responses received for this survey.</p>
+</div>
 <div class="section">
   <h2 class="title">Section Name</h2>
   <p class="description">Explanatory text</p>
@@ -48,3 +48,4 @@
     </div>
   </div>
 </div>
+<div><small>Many survey questions were taken from <a href="http://yapc-surveys.org/">YAPC Surveys</a> which is copyright The Perl Foundation and may be used under a <a href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution Share Alike</a> license. All changes and additions are copyright the Interchange Development Group.</small></div>
