add count of responses to /survey-results for admins only

--- a/views/surveys/results.html
+++ b/views/surveys/results.html
@@ -7,8 +7,8 @@
 
 <div class="survey-list">
   <p class="lead">The following survey results are available to you:</a>
-  <p class="closed">The 1/0 prefix shows whether survey is closed or not.</p>
+  <p class="is_admin">The 1/0 prefix shows whether survey is closed or not and the trailing number is the count of responses.</p>
   <ul>
-    <li class="survey"><span class="closed">Open/Closed</span> <a class="title" href="/survey-results/">Survey title</span></li>
+    <li class="survey"><span class="is_admin closed">Open/Closed</span> <a class="title" href="/survey-results/">Survey title</a> <span class="is_admin">(<span class="completed_count">count</span>)</span></li>
   </ul>
 </form>
