add extra text to /surveys

--- a/views/surveys.html
+++ b/views/surveys.html
@@ -15,6 +15,8 @@
 
   <p>Please do <strong>not</strong> feel obliged to complete all surveys. We would really like you to complete as many as possible and the talk reviews are very short but we understand that your time is valuable. At the same time the more surveys and reviews that are completed the more chance we will have to deliver an even better conference next year.</p>
 
+  <p>The speakers really value feedback on their talks, so if you can complete as many as you can, at least those that you remember well, they would really appreciate it.</p>
+
   <p>Thanks again for your support.</p>
 
   <ul>
