add end date for surveys

--- a/views/surveys.html
+++ b/views/surveys.html
@@ -19,6 +19,8 @@
 
   <p>Thanks again for your support.</p>
 
+  <p><strong>NOTE:</strong> surveys will close at the end of November so please complete them ASAP.</p>
+
   <ul>
     <li class="survey"><a class="title" href="/surveys/">Survey title</span></li>
   </ul>
