add response counts to survey results plus improve display of tables

--- a/views/surveys/result.html
+++ b/views/surveys/result.html
@@ -8,44 +8,44 @@
     <div class="panel-heading title">
       Question/title
     </div>
-    <div class="panel-body">
+    <div class="panel-body has_description">
       <span class="description">Additional text</span>
-
-      <div class="table-responsive options_table">
-        <table class="table table-striped">
-          <thead>
-            <tr>
-              <th class="is_simple">Count</th>
-              <th>Description</th>
-              <th class="is_grid">Very satisfied</th>
-              <th class="is_grid">Somewhat satisfied</th>
-              <th class="is_grid">Somewhat un-satisfied</th>
-              <th class="is_grid">Very un-satisfied</th>
-              <th class="is_grid">N/A</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr class="option">
-              <td class="is_simple"><span class="count1">0</span></td>
-              <td class="title">Option name</td>
-              <td class="show_count1"><span class="count1">0</span></td>
-              <td class="show_count2"><span class="count2">0</span></td>
-              <td class="show_count3"><span class="count3">0</span></td>
-              <td class="show_count4"><span class="count4">0</span></td>
-              <td class="show_count5"><span class="count5">0</span></td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-
-      <div class="other-container">
-        <span class="other">replacement text goes here</span>:
-        <ul>
-          <li class="other-response"><span class="response">Some text</span></li>
-        </ul>
-      </div>
-
     </div>
+
+    <div class="table-responsive options_table">
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th class="is_simple">Count</th>
+            <th>Description</th>
+            <th class="is_grid">Very satisfied</th>
+            <th class="is_grid">Somewhat satisfied</th>
+            <th class="is_grid">Somewhat un-satisfied</th>
+            <th class="is_grid">Very un-satisfied</th>
+            <th class="is_grid">N/A</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr class="option">
+            <td class="is_simple"><span class="count1">0</span></td>
+            <td class="title">Option name</td>
+            <td class="show_count1"><span class="count1">0</span></td>
+            <td class="show_count2"><span class="count2">0</span></td>
+            <td class="show_count3"><span class="count3">0</span></td>
+            <td class="show_count4"><span class="count4">0</span></td>
+            <td class="show_count5"><span class="count5">0</span></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+
+    <div class="other-container panel-body">
+      <span class="other">replacement text goes here</span>:
+      <ul>
+        <li class="other-response"><span class="response">Some text</span></li>
+      </ul>
+    </div>
+
   </div>
 </div>
 <div><small>Many survey questions were taken from <a href="http://yapc-surveys.org/">YAPC Surveys</a> which is copyright The Perl Foundation and may be used under a <a href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution Share Alike</a> license. All changes and additions are copyright the Interchange Development Group.</small></div>
