add not to speakers on /surveys

--- a/views/surveys.html
+++ b/views/surveys.html
@@ -19,7 +19,9 @@
 
   <p>Thanks again for your support.</p>
 
-  <p><strong>NOTE:</strong> surveys will close at the end of November so please complete them ASAP.</p>
+  <p><strong>Please Note:</strong> surveys will close at the end of November so please complete them ASAP.</p>
+
+  <p><strong>Note to speakers:</strong> you will <strong>not</strong> see you own talk in the list since we do not allow speakers to review their own talk.</p>
 
   <ul>
     <li class="survey"><a class="title" href="/surveys/">Survey title</span></li>
