--- a/views/admin/talks/create_update.html
+++ b/views/admin/talks/create_update.html
@@ -58,6 +58,14 @@
         </div>
     </div>
 
+    <div class="form-group video_url_input">
+        <label for="inputVideoUrl" class="col-sm-2 control-label">Video Url</label>
+        <div class="col-sm-10">
+            <input type="text" class="form-control" id="inputVideoUrl" name="video_url" placeholder="Video Url">
+            <div class="help-block video_url_error"></div>
+        </div>
+    </div>
+
     <div class="form-group accepted_input">
         <label for="inputAccepted" class="col-sm-2 control-label">Accepted</label>
         <div class="col-sm-10">
