--- a/views/talks.xml
+++ b/views/talks.xml
@@ -16,5 +16,9 @@
     <param name="author-link" class="title" target="href" op="append" field="seo_uri"/>
     <param name="duration"/>
     <param name="start_time" filter="date"/>
+    <param name="has_slides" field="url" op="toggle" args="tree"/>
+    <param name="url" target="href"/>
+    <param name="has_video" field="video_url" op="toggle" args="tree"/>
+    <param name="video_url" target="href"/>
   </list>
 </specification>
