add video link to talk page

--- a/views/schedule.html
+++ b/views/schedule.html
@@ -55,8 +55,8 @@
                 <span class="show-stars"><span class="remove_talk"><a href="/talks/remove/" class="picked"><img src="/img/picked.gif" title="remove from personal schedule"></a></span><span class="add_talk"><a href="/talks/add/" class="unpicked"><img src="/img/unpicked.gif" title="add to personal schedule"></a></span> </span>
                 <a class="author_uri" href="/speakers/"><span class="author_name">Author</span><span class="author_nickname"> (NickName)</span></a> - 
                 <a class="title" href="/talks/">Talk Name</a>
-                <span class="has_slides"> <a class="url text-muted">[slides]</a></span>
-                <span class="has_video"> <a target="_blank" class="video_url text-muted">[video]</a></span>
+                <span class="has_slides"> [<a class="url text-muted">slides</a>]</span>
+                <span class="has_video"> [<a target="_blank" class="video_url text-muted">video</a>]</span>
                 <span class="duration"> (10 min)</span><span> </span>
                 <span class="stars">X</span><img src="/img/picked.gif">
               </span>
