--- a/views/talk.html
+++ b/views/talk.html
@@ -27,9 +27,7 @@
           <div class="abstract">
           Abstract appears here.
           </div>
-          <div class="talk-uri-container">
-            <a class="talk-uri">Download talk</a>
-          </div>
+          <span class="talk-uri-container"> [<a class="talk-uri">slides</a>]</span><span class="talk-video-container"> [<a class="video-uri">video</a>]</span>
         </div>
         <div class="panel-footer">
           <div class="has_attendees">
