--- a/views/talks.html
+++ b/views/talks.html
@@ -21,7 +21,7 @@
       <tbody>
         <tr class="talks">
           <td><a class="name" href="/speakers/">Name</a></td>
-          <td><span class="show-stars"><span class="remove_talk"><a href="/talks/remove/" class="picked"><img src="/img/picked.gif" title="remove from personal schedule"></a></span><span class="add_talk"><a href="/talks/add/" class="unpicked"><img src="/img/unpicked.gif" title="add to personal schedule"></a></span> </span><a class="title" href="/talks/">Title</a><span class="has_slides"> <a class="url text-muted">[slides]</a></span><span class="has_video"> <a target="_blank" class="video_url text-muted">[video]</a></span></td>
+          <td><span class="show-stars"><span class="remove_talk"><a href="/talks/remove/" class="picked"><img src="/img/picked.gif" title="remove from personal schedule"></a></span><span class="add_talk"><a href="/talks/add/" class="unpicked"><img src="/img/unpicked.gif" title="add to personal schedule"></a></span> </span><a class="title" href="/talks/">Title</a><span class="has_slides"> [<a class="url text-muted">slides</a>]</span><span class="has_video"> [<a target="_blank" class="video_url text-muted">video</a>]</span></td>
           <td><span class="duration">XX</span> min</td>
           <td class="start_time">1/1/2011</td>
         </tr>
