_blank target for video link in talk page

--- a/views/talk.html
+++ b/views/talk.html
@@ -27,7 +27,7 @@
           <div class="abstract">
           Abstract appears here.
           </div>
-          <span class="talk-uri-container"> [<a class="talk-uri">slides</a>]</span><span class="talk-video-container"> [<a class="video-uri">video</a>]</span>
+          <span class="talk-uri-container"> [<a class="talk-uri">slides</a>]</span><span class="talk-video-container"> [<a target="_blank" class="video-uri">video</a>]</span>
         </div>
         <div class="panel-footer">
           <div class="has_attendees">
