Substitute conference name in email with actual one instead of hardcoding it.

--- a/views/layouts/email.xml
+++ b/views/layouts/email.xml
@@ -1,4 +1,5 @@
 <specification>
   <value name="content" class="content" op="hook"/>
   <value name="conference-logo" target="src"/>
+  <value name="conference-name" field="config.conference_name"/>
 </specification>
