start work on upgrading to new multi-currency IC6 schema

--- a/views/fragments/tickets.html
+++ b/views/fragments/tickets.html
@@ -15,7 +15,7 @@
         <input type="hidden" class="sku" name="sku">
         <!--button type="submit" class="btn btn-primary">Book Now</button-->
         <div class="ticket-left-container">
-          <a href="/register" class="btn btn-primary buy-ticket">Buy Now</a>
+          <a href="/cart?sku=" class="btn btn-primary buy-ticket">Buy Now</a>
         </div>
         <div class="sold-out">
           <button class="btn btn-primary buy-ticket" disabled="disabled">No longer available</button>
