Adjust text on frontpage.

--- a/views/index.html
+++ b/views/index.html
@@ -5,11 +5,9 @@
   </div>
 
     <div class="well">
-      <p>The Perl Dancer Conference is a two day event on 21st and 22nd October
+      <p>The Perl Dancer Conference is a two day event on 21st and 22nd September
       at the <a href="#location">Hotel Schani Wien</a>.</p>
-      <p>For those wanting a longer experience we are running two days of
-      training courses prior to the main conference on the 19th and 20th
-      October at <a href="#location">Amerikahaus</a> in Vienna.
+      <p>We are also going to have a training course or a hackathon on 20th September, location to be determined.
     </div>
 
   <div class="register-container">
