--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -118,7 +118,7 @@
     <div class="footer">
       <div class="copyright-container container">
         <div class="copyright-left">
-            © Copyright 2015 Interchange Development Group, All Right Reserved
+            © Copyright 2015-2016 Interchange Development Group, All Right Reserved
         </div>
       </div>
     </div>
