Add more adjustments for 2016 instance.

--- a/views/schedule.html
+++ b/views/schedule.html
@@ -10,14 +10,14 @@
       </thead>
       <tbody>
         <tr>
-          <td>Mon 19th - Tue 20th October 2015</td>
-          <td>Amerikahaus</td>
-          <td>Two days of Dancer and DBIx::Class training</td>
+          <td>Tue 20th September 2016</td>
+          <td>-</td>
+          <td>Training/Hackathon</td>
         </tr>
         <tr>
-          <td>Wed 21st - Thu 22nd October 2015</td>
+          <td>Wed 21st - Thu 22nd September 2016</td>
           <td>Hotel Schani Wien</td>
-          <td>Perl Dancer Conference 2015</td>
+          <td>Perl Dancer Conference 2016</td>
         </tr>
       </tbody>
     </table>
