Display message in case no tickets are found for the current conference.

--- a/views/fragments/tickets.html
+++ b/views/fragments/tickets.html
@@ -23,3 +23,7 @@
       </form>
     </div>
   </div>
+
+  <div class="well not-avail">
+      <p>Tickets are not available yet for this year's conference.</p>
+  </div>
