Fix tickets not yet available and message and hide teaser completely.

--- a/views/fragments/tickets.html
+++ b/views/fragments/tickets.html
@@ -25,5 +25,5 @@
   </div>
 
   <div class="well not-avail">
-      <p>Tickets are not available yet for this year's conference.</p>
+      <p>Tickets are not yet available for this year's conference.</p>
   </div>
