Clear out sponsors.

--- a/views/sponsors.html
+++ b/views/sponsors.html
@@ -1,36 +1,4 @@
 <div id="sponsors">
-  <h3 class="text-center">Gold Sponsors</h3>
-  <div>
-    <a href="http://www.booking.com/"><img src="/img/booking-logo.jpg" class="center-block img-responsive"></a>
-  </div>
-  <h3 class="text-center">Silver Sponsors</h3>
-  <div>
-    <a href="http://www.weborama.com/"><img src="/img/logo-weborama1.png" class="center-block img-responsive"></a>
-  </div>
-  <div>
-    <a href="http://www.ivouch.com/"><img src="/img/ivouch-logo.png" class="center-block img-responsive"></a>
-  </div>
-  <div>
-    <a href="http://www.informastudio.com/"><img src="/img/informa-logo.png" class="center-block img-responsive"></a>
-  </div>
-  <h3 class="text-center">Bronze Sponsors</h3>
-  <div>
-    <a href="https://www.calevo.com/"><img src="/img/calevo-logo.jpg" class="center-block img-responsive"></a>
-  </div>
-  <div>
-    <a href="http://www.eligo.co.uk/technology"><img src="/img/eligo-logo.jpg" class="center-block img-responsive"></a>
-  </div>
-  <div>
-    <a href="https://www.m-and-d.com/"><img src="/img/mandd-logo.png" class="center-block img-responsive"></a>
-  </div>
-  <div>
-    <a href="http://www.ctrlo.com/"><img src="/img/CtrlO-logo.png" class="center-block img-responsive"></a>
-  </div>
-  <h3 class="text-center">Sponsors</h3>
-  <div>
-    <a href="http://www.linuxia.de/"><img src="/img/linuxia-logo.png" class="center-block img-responsive"></a>
-  </div>
-  <div>
-    <a href="http://www.sysnix.com/"><img src="/img/sysnix-logo-small.png" class="center-block img-responsive"></a>
-  </div>
+     Please send an email to <a href="mailto:2016@perl.dance">2016@perl.dance</a> if you want to sponsor the Perl Dancer Conference 2016.
 </div>
+
