Add routes for displaying talks from previous years

--- a/views/talks.html
+++ b/views/talks.html
@@ -7,7 +7,7 @@
     <div class="panel-body">
       <h3 class="panel-title">Tags</h3>
       <div id="tagcloud" class="cloud"></div>
-      <a class="has_tag btn btn-default btn-sm spacing-top-small" href="/talks">Show All Talks</a>
+      <a class="all_talks has_tag btn btn-default btn-sm spacing-top-small" href="/talks">Show All Talks</a>
     </div>
     <table class="table table-responsive table-hover">
       <thead>
