--- a/views/cfp.html
+++ b/views/cfp.html
@@ -7,7 +7,7 @@
     <p>
     Each presentation will last either 20 or 40 minutes after which there will be time for questions.
     </p>
-    <p>The submission deadline is August 30th, midnight CET. Proposals will be reviewed within a few days after the deadline.
+    <p>The submission deadline is August 30th, midnight CET. Talks are reviewed and possibly accepted as we receive them.
     </p>
   </div>
   <h2 class="stunning-text-title">Suggested Topics</h2>
