Add M&D as bronze sponsor for 2016.

--- a/views/fragments/sidebar.html
+++ b/views/fragments/sidebar.html
@@ -1,5 +1,10 @@
 <div class="well">
   <h4 class="text-center"><a href="/sponsoring">Become a sponsor</a></h4>
+  <h4 class="text-center">Our Sponsors</h4>
+  <h5 class="text-center">Bronze Sponsors</h5>
+  <div>
+    <a href="https://www.m-and-d.com/"><img src="/img/mandd-logo.png" class="center-block img-responsive"></a>
+  </div>
 </div>
 <div class="well">
   <h4 class="text-center">Partners</h4>
