--- a/views/sponsors.html
+++ b/views/sponsors.html
@@ -1,4 +1,8 @@
 <div id="sponsors">
-     Please send an email to <a href="mailto:2016@perl.dance">2016@perl.dance</a> if you want to sponsor the Perl Dancer Conference 2016.
+  Please send an email to <a href="mailto:2016@perl.dance">2016@perl.dance</a> if you want to sponsor the Perl Dancer Conference 2016.
+  <h3 class="text-center">Bronze Sponsors</h3>
+  <div>
+    <a href="https://www.m-and-d.com/"><img src="/img/mandd-logo.png" class="center-block img-responsive"></a>
+  </div>
 </div>
 
