--- a/views/index.html
+++ b/views/index.html
@@ -81,7 +81,7 @@
       </div>
       <div class="col-md-4">
         <blockquote>
-          <p>I am coming for the third year. It feels almost at home. I am looking forward to Vienna this year!</p>
+          <p>I am coming for the fourth year. It feels almost at home. I am looking forward to Vienna this year!</p>
           <footer>Jure Kodžoman <cite>Informa Studio</cite></footer>
         </blockquote>
       </div>
