--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -82,25 +82,25 @@
       <div class="alerts-success">
         <div class="alert alert-success alert-dismissable" role="alert">
           <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <strong>Success!</strong> <span class="message">Some message</span>
+          <strong>Success!</strong> <span class="deferred-success">Some message</span>
         </div>
       </div>
       <div class="alerts-info">
         <div class="alert alert-info alert-dismissable" role="alert">
           <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <strong>Info!</strong> <span class="message">Some message</span>
+          <strong>Info!</strong> <span class="deferred-info">Some message</span>
         </div>
       </div>
       <div class="alerts-warning">
         <div class="alert alert-warning alert-dismissable" role="alert">
           <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <strong>Warning!</strong> <span class="message">Some message</span>
+          <strong>Warning!</strong> <span class="deferred-warning">Some message</span>
         </div>
       </div>
       <div class="alerts-error">
         <div class="alert alert-danger alert-dismissable" role="alert">
           <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <strong>Error!</strong> <span class="message">Some message</span>
+          <strong>Error!</strong> <span class="deferred-error">Some message</span>
         </div>
       </div>
     </div>
