Add sponsor tokens, revise sponsor views and update sponsor data.

--- a/views/sponsors.html
+++ b/views/sponsors.html
@@ -1,12 +1,13 @@
-<div id="sponsors">
-  Please send an email to <a href="mailto:2016@perl.dance">2016@perl.dance</a> if you want to sponsor the Perl Dancer Conference 2016.
-  <h3 class="text-center">Gold Sponsors</h3>
-  <div>
-    <a href="http://www.ivouch.com/"><img src="/img/ivouch-logo.png" class="center-block img-responsive"></a>
-  </div>
-  <h3 class="text-center">Bronze Sponsors</h3>
-  <div>
-    <a href="https://www.m-and-d.com/"><img src="/img/mandd-logo.png" class="center-block img-responsive"></a>
-  </div>
-</div>
 
+<div id="sponsors">
+  <div class="text-center">Please send an email to <a href="mailto:2016@perl.dance">2016@perl.dance</a> if you want to sponsor the Perl Dancer Conference 2016.</div>
+  <span class="company-level-box">
+   <h3 class="text-center company-level">Platinum Sponsors</h3>
+   <div class="company-details">
+     <a href="" class="company-link" target="_blank">
+       <img src="/" class="center-block img-responsive company-logo"/>
+     </a>
+     <div class="text-center company-teaser">Visit our grand Foo Center</div>
+   </div>
+  </span>
+</div>
