Update sidebar with dynamic sponsors (GH #88).

--- a/views/fragments/sidebar.html
+++ b/views/fragments/sidebar.html
@@ -1,15 +1,15 @@
 <div class="well">
   <h4 class="text-center"><a href="/sponsoring">Become a sponsor</a></h4>
   <h4 class="text-center">Our Sponsors</h4>
-  <h5 class="text-center">Gold Sponsors</h5>
-  <div>
-    <a href="http://www.ivouch.com/"><img src="/img/ivouch-logo.png" class="center-block img-responsive"></a>
-  </div>
-  <h5 class="text-center">Bronze Sponsors</h5>
-  <div>
-    <a href="https://www.m-and-d.com/"><img src="/img/mandd-logo.png" class="center-block img-responsive"></a>
-  </div>
+  <span class="company-level-box">
+    <h5 class="text-center company-level">Gold Sponsors</h5>
+    <div class="text-center company-details">
+       <a href="" class="company-link" target="_blank"><img src="/" class="center-block img-responsive company-logo"></a>
+     <p class="company-teaser">Visit our grand Foo Center</p>
+    </div>
+  </span>
 </div>
+
 <div class="well">
   <h4 class="text-center">Partners</h4>
   <div>
