--- a/views/admin/news/create_update.html
+++ b/views/admin/news/create_update.html
@@ -22,6 +22,14 @@
     </div>
 
     <div class="form-group">
+      <label for="inputTitle" class="col-sm-2 control-label">Teaser</label>
+      <div class="col-sm-10">
+        <textarea rows="5" class="form-control" id="inputTeaser" name="summary" placeholder="Teaser" required></textarea>
+        <span class="help-block">Teaser should be written in Markdown</span>
+      </div>
+    </div>
+
+    <div class="form-group">
       <label for="inputPublic" class="col-sm-2 control-label">Public</label>
       <div class="col-sm-10">
         <label class="radio-inline">
