--- a/views/admin/news/create_update.html
+++ b/views/admin/news/create_update.html
@@ -37,6 +37,13 @@
       </div>
     </div>
 
+    <div class="form-group tags_input">
+        <label for="inputTags" class="col-sm-2 control-label">Tags</label>
+        <div class="col-sm-10">
+            <input type="text" class="form-control" id="inputTags" name="tags" placeholder="#Hashtags for Twitter">
+         </div>
+    </div>
+
     <div class="form-group">
       <label for="inputPublic" class="col-sm-2 control-label">Public</label>
       <div class="col-sm-10">
