--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -16,6 +16,8 @@
     <link rel='stylesheet' href='/css/bootstrap-datetimepicker.min.css' type='text/css'>
     <link rel='stylesheet' href='/css/jquery.Jcrop.min.css' type='text/css'>
     <link rel='stylesheet' href='/css/site.css' type='text/css'>
+    <script type="application/ld+json" id="structured-data">
+    </script>
     <!--[if lt IE 9]>
     <script src="/js/html5.js"></script>
     <script src="/js/excanvas.js"></script>
