Add talks from pervious conferendes to speaker page.

--- a/views/speaker.html
+++ b/views/speaker.html
@@ -52,5 +52,13 @@
         </div>
       </div>
 
+      <h4 class="has_previous_talks">Talks at previous conferences</h4>
+      <div class="panel panel-primary previous_talks">
+        <div class="panel-heading">
+          <h4 class="panel-title"><a class="talk-link" href="/talks/">Web Development using Dancer</a></h4>
+          <span class="conference">Conference Name</span>
+        </div>
+      </div>
+
     </div>
   </div>
