--- a/views/admin/talks/create_update.html
+++ b/views/admin/talks/create_update.html
@@ -50,6 +50,15 @@
         </div>
     </div>
 
+    <div class="form-group organiser_notes_input">
+        <label for="inputOrganiser_Notes" class="col-sm-2 control-label">Organiser Notes</label>
+        <div class="col-sm-10">
+            <textarea rows="5" class="form-control" id="inputOrganiser_Notes" name="organiser_notes" placeholder="Notes from organisers highlighted on the talk page"></textarea>
+            <span class="help-block">Notes from Organisers should be written in Markdown</span>
+            <div class="help-block organiser_notes_error"></div>
+        </div>
+    </div>
+
     <div class="form-group url_input">
         <label for="inputUrl" class="col-sm-2 control-label">Optional Url</label>
         <div class="col-sm-10">
