--- a/views/talk.html
+++ b/views/talk.html
@@ -24,6 +24,9 @@
           <h3 class="panel-title">Talk Title Here</h3>
         </div>
         <div class="panel-body">
+          <div class="organiser-notes"><b>
+            Organiser notes appear here.
+          </b></div>
           <div class="abstract">
           Abstract appears here.
           </div>
