--- a/views/admin/tickets.html
+++ b/views/admin/tickets.html
@@ -13,7 +13,7 @@
       <tr class="order-item">
         <td class="orders_id">1</td>
         <td class="order_date">1/1/2011</td>
-        <td class="name">Name</td>
+        <td class="name"><a href="/users/" class="name-link">Name</a></td>
         <td class="email">user@example.com</td>
         <td class="subtotal">$10.0</td>
       </tr>
