Add content to main sponsorship page.

--- a/views/sponsors.html
+++ b/views/sponsors.html
@@ -8,6 +8,7 @@
        <img src="/" class="center-block img-responsive company-logo"/>
      </a>
      <div class="text-center company-teaser">Visit our grand Foo Center</div>
+     <div class="text-center company-content">Lots of facts about our grand Foo Center</div>
    </div>
   </span>
 </div>
