Add link from talk admin to scheduled day.

--- a/views/admin/talks.html
+++ b/views/admin/talks.html
@@ -23,7 +23,7 @@
           <td class="accepted">yes/no</td>
           <td class="confirmed">yes/no</td>
           <td class="scheduled">yes/no</td>
-          <td class="start_time">date/time</td>
+          <td class="start_time"><a href="/talks/schedule/" class="schedule-link">date/time</a></td>
           <td class="room">Room</td>
           <td><a class="edit" href="/admin/talks/edit/"><i class="fa fa-edit"></i></a></td>
           <td><a class="delete" href="/admin/talks/delete/"><i class="fa fa-trash"></i></a></td>
