Update basic conference information on the frontpage.

--- a/views/index.html
+++ b/views/index.html
@@ -7,7 +7,8 @@
     <div class="well">
       <p>The Perl Dancer Conference is a two day event on 21st and 22nd September
       at the <a href="#location">Hotel Schani Wien</a>.</p>
-      <p>We are also going to have a training course or a hackathon on 20th September, location to be determined.
+      <p>We are also going to have a <a href="/talks/53-programming-the-web-with-dancer">Dancer training</a> on 20th September at the
+        same location.
     </div>
 
   <div class="register-container">
