Update frontpage text with hackathon and social event.

--- a/views/index.html
+++ b/views/index.html
@@ -6,9 +6,8 @@
 
     <div class="well">
       <p>The Perl Dancer Conference is a two day event on 21st and 22nd September
-      at the <a href="#location">Hotel Schani Wien</a>.</p>
-      <p>We are also going to have a <a href="/talks/53-programming-the-web-with-dancer">Dancer training</a> on 20th September at the
-        same location.
+        at the <a href="#location">Hotel Schani Wien</a>. We are also going to have a <a href="/talks/53-programming-the-web-with-dancer">Dancer training</a> on 20th September at the same location, alongside with a Hackathon.</p>
+      <p>The <a href="/wiki/Social Event">social event</a> is on the 22nd September.</p>
     </div>
 
   <div class="register-container">
