fix silly typo in css

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -449,7 +449,7 @@ span.tagcloud24 a {text-decoration: none;}
   text-indent: -1.5em;
 }
 .news-container .content img {
-  dispay:block;
+  display:block;
   max-width:100%;
   height:auto;
 }
