Replace hardcoded conference name in email_sent template.

--- a/views/email_sent.xml
+++ b/views/email_sent.xml
@@ -1,4 +1,5 @@
 <specification>
   <value name="title"/>
   <value name="username"/>
+  <value name="conference_name" class="conference-name"/>
 </specification>
