--- a/views/email_sent.html
+++ b/views/email_sent.html
@@ -3,5 +3,5 @@
     <p>An email has been sent to <span class="username">user@example.com</span>
     with details as to how you should proceed.<br/>
     Please check your SPAM folder if the email doesn't arrive within a few minutes or contact us at <a href="mailto:2016@perl.dance">2016@perl.dance</a>.</p>
-    <p>We look forward to seeing you at the Perl Dancer Conference.</p>
+    <p>We look forward to seeing you at the <span class="conference-name">Perl Dancer Conference</span>.</p>
   </div>
