Add SPAM protection to password reset form according to https://advent.perldancer.org/2018/21.

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -453,3 +453,14 @@ span.tagcloud24 a {text-decoration: none;}
   max-width:100%;
   height:auto;
 }
+
+.chain {
+    border: 0;
+    clip: rect(0 0 0 0);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
+}
