--- a/views/register_reset.html
+++ b/views/register_reset.html
@@ -2,6 +2,10 @@
     <h2 class="text-center action_name">Do something</h2>
     <div class="text text-center">Some text about what is going on.</div>
     <form class="text-center form-inline form register-email" name="register-reset" method="post" action="/register">
+      <div>
+        <label class="chain"><input type="text" name="noaccount" tabindex="-1"></label>
+        <input type="hidden" name="nopass">
+      </div>
       <div class="form-group username_input">
         <input class="form-control" type="email" name="username" size="30" required placeholder="Please enter your email address">
         <div class="help-block username_error"></div>
